# BGClib

./: .gitignore  BGC_SVG_generator.py  BGClib.py  BGCprotein.py  BGCtoolkit.py  CHANGELOG.md  Core_Biosynthetic_Protein_fasta_options.cfg  LICENSE  Readme.md  SVG_arrow_options.cfg  environment.yml  pyproject.toml  setup.py
BGClib/: BGClib.py  Pfam-A.hmm.domain_info.tsv  Readme.md  __init__.py  bgc.py  locus.py  protein.py
BGClib/annotations/: domain.py  hmm.py
BGClib/collections/: bgcs.py  proteins.py
BGClib/data/: CBP_domains.tsv  SM_domain_roles.tsv  __init__.py  domain_color_file_ID.tsv  domain_color_file_IDh.tsv  domains_alias.tsv  domains_color_file_ID.tsv  protein_types.tsv  utilities.py
BGClib/data/Domain_models/: FNP_terpene_models.hmm  ORF3.hmm  PKS_ER_antiSMASH.hmm  TIGR04532.HMM.h3f  TIGR04532.HMM.h3i  TIGR04532.HMM.h3m  TIGR04532.HMM.h3p  core_biosynthetic_protein_domains.hmm  diterpene_tc.hmm  mero_tc.hmm
BGClib/metadata/: metabolite.py  organism.py
BGClib/visualization/: arrower.py
Other Data/: SM_domain_roles.tsv  domains_color_file_ID.tsv
Other Data/Domain models/: TIGR04532.HMM
examples/: AfumigatusAf293.metadata.BGCs.tsv  AfumigatusAf293.metadata.CBPs.tsv  AfumigatusAf293.metadata.summary.txt  all_KS_domains.fasta  all_KS_domains.fasta.metadata.tsv
examples/data/cercosporin/: BGC0001247.1.gbk  BGC0001541.1.gbk  BGC0001542.1.gbk  cercosporin_MIBiG.tsv
examples/data/cladofulvin/: Cladofulvin_Final.gbk
examples/data/mycophenolic acid/: BGC0000104.1.gbk  BGC0001360.1.gbk  BGC0001677.1.gbk  mycophenolic_acid_MIBiG.tsv  (+2 more)
(+1 files in other folders)
